--- a/package.json
+++ b/package.json
@@ -3,9 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dot-prop-immutable": "^1.4.0",
+    "lodash-es": "^4.17.5",
+    "material-ui": "^0.20.0",
+    "material-ui-responsive-drawer": "^1.19.4",
+    "ol-react": "git+https://github.com/ealgis/ol-react.git",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts-ts": "2.13.0"
+    "react-ga": "^2.4.1",
+    "react-redux": "^5.0.7",
+    "react-router-redux": "^4.0.8",
+    "react-scripts-ts": "2.13.0",
+    "redux-form": "^7.2.3",
+    "redux-form-material-ui": "^4.3.3",
+    "redux-responsive": "^4.3.5",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^3.1.6"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -14,10 +27,21 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/history": "^4.6.2",
     "@types/jest": "^22.1.4",
+    "@types/lodash-es": "^4.17.0",
+    "@types/material-ui": "^0.21.0",
     "@types/node": "^9.4.6",
     "@types/react": "^16.0.39",
     "@types/react-dom": "^16.0.4",
+    "@types/react-ga": "^2.3.0",
+    "@types/react-redux": "^5.0.15",
+    "@types/react-router": "^4.0.22",
+    "@types/react-router-redux": "^5.0.12",
+    "@types/redux-form": "^7.0.14",
+    "@types/redux-thunk": "^2.1.0",
+    "core-js": "^2.5.3",
+    "redux-devtools-extension": "^2.13.2",
     "typescript": "^2.7.2"
   }
 }
